# CP-SAT-Log-Analyzer

./: README.md  pyproject.toml
.github/workflows/: pytest.yml
_app/: input_log.py
cpsat_log_parser/blocks/: search_progress.py
